edited 01.04 nonuniform sensitivity

--- a/notebooks/01.04-Nonuniform-sensitivity.ipynb
+++ b/notebooks/01.04-Nonuniform-sensitivity.ipynb
@@ -13,11 +13,11 @@
    "source": [
     "## Background\n",
     "\n",
-    "Not all pixels in a camera have the same sensitivity to light. There is some intrinsic difference from pixel-to-pixel but there is also vignetting (dimming near the corners) caused by the optical system to which the camera is attached, and dust on optical elements (filters, the glass window covering the CCD, the CCD chip itself) blocks some light.\n",
+    "Not all pixels in a camera have the same sensitivity to light: there are intrinsic differences from pixel-to-pixel. Vignetting, a dimming near the corners of an image caused by the optical system to which the camera is attached, and dust on optical elements such as filters, the glass window covering the CCD, and the CCD chip itself can also block some light.\n",
     "\n",
-    "The effect of each of these is to reduce the amount of light reaching the CCD chip, in the case of vvingetting and dust, and to affect the counts read from the chip (pixel-to-pixel sensitivity variations).\n",
+    "Vingetting and dust can reduce the amount of light reaching the CCD chip while pixel-to-pixel sensitivity variations affects the counts read from the chip.\n",
     "\n",
-    "The code to produce the simulated sensitivty map (aka flat image) is long enough that is not included in the notebook. We load it instead from [image_sim.py](image_sim.py)."
+    "The code to produce the simulated sensitivty map (aka flat image) is long enough that is not included in this notebook. We load it instead from [image_sim.py](image_sim.py)."
    ]
   },
   {
@@ -38,7 +38,7 @@
    "source": [
     "## A sample flat image\n",
     "\n",
-    "The sample below has the same size as the simulated images in the previous images. "
+    "The sample below has the same size as the simulated image in the previous images. "
    ]
   },
   {
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the size of the variations is small, at most a few percent. "
+    "Note that the size of the variations is small, a few percent at most. "
    ]
   },
   {
@@ -84,13 +84,13 @@
    "source": [
     "## Effect of nonuniform sensitivity on images\n",
     "\n",
-    "Recall that an image read off a CCD, ignoring variations in sensitivity, can be though of as a combination of several pieces:\n",
+    "Recall that an image read off a CCD, ignoring variations in sensitivity, can be thought of as a combination of several pieces:\n",
     "\n",
     "$$\n",
     "\\text{image} = \\text{bias} + \\text{noise} + \\text{dark current} + \\text{sky} + \\text{stars}\n",
     "$$\n",
     "\n",
-    "The effect of sensitivty variations is to reduce the amount of *light* reaching the sensor. In the equation above, that means that the flat multiples just the sky and stars portion of the input,\n",
+    "The effect of sensitivity variations is to reduce the amount of *light* reaching the sensor. In the equation above, that means that the flat multiplies just the sky and stars portion of the input:\n",
     "\n",
     "$$\n",
     "\\text{image} = \\text{bias} + \\text{noise} + \\text{dark current} + \\text{flat} \\times (\\text{sky} + \\text{stars})\n",
@@ -164,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visually this does not look any different tha the final image in the previous notebook; the effects of sensitivity variations are typically not evident in raw images unless the sky background is large. \n",
+    "Visually, this does not look any different than the final image in the previous notebook; the effects of sensitivity variations are typically not evident in raw images unless the sky background is large. \n",
     "\n",
     "You can see the effect by artificially increasing the sky background."
    ]
@@ -214,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
