--- a/notebooks/01.05-Calibration-overview.ipynb
+++ b/notebooks/01.05-Calibration-overview.ipynb
@@ -11,15 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An image of the sky contains counts due several source. The task of data reduction (another name for image calibration) is to remove all non-celestial counts from the image and to correct for non-uniform sensitivity.\n",
+    "An image of the sky contains counts from several sources. The task of data reduction (another name for image calibration) is to remove all non-celestial counts from the image and to correct for non-uniform sensitivity.\n",
     "\n",
-    "At the end of the previous notebook we arrived at an expression for the counts in a science image in terms of the sources of counts\n",
+    "At the end of the previous notebook we arrived at an expression for the counts in a science image in terms of the sources of counts:\n",
     "\n",
     "$$\n",
     "\\text{raw image} = \\text{bias} + \\text{noise} + \\text{dark current} + \\text{flat} \\times (\\text{sky} + \\text{stars}).\n",
     "$$\n",
     "\n",
-    "Solving for the counts just due to the stars is straightforward:\n",
+    "Solving for the counts just from the stars is as follows:\n",
     "\n",
     "$$\n",
     "\\text{stars} + \\text{noise} = \\frac{\\text{raw image} - \\text{bias} - \\text{dark current}}{\\text{flat}} - \\text{sky}\n",
@@ -27,20 +27,20 @@
     "\n",
     "#### It is *impossible* to remove the noise from the raw image because the noise is random.\n",
     "\n",
-    "The dark current is typically calculated from a *dark frame* (aka dark image); such an image has bias and read noise in it, so\n",
+    "The dark current is typically calculated from a *dark frame* (aka dark image). Such an image has bias and read noise in it as well, so:\n",
     "\n",
     "$$\n",
     "\\text{dark current} + \\text{noise} = (\\text{dark frame} - \\text{bias})/(\\text{dark exposure time})\n",
     "$$\n",
     "\n",
-    "Once again, note that noise cannot be removed."
+    "Once again, note that the noise cannot be removed."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Really, you cannot remove the noise\n",
+    "## This noise cannot be removed from CCD images\n",
     "\n",
     "To demonstrate that you cannot remove the noise from an image, let's construct an image with just stars and noise and try to subtract a noise image created with the same parameters. The amount of noise here is exaggerated to make it clear in the images."
    ]
@@ -68,7 +68,7 @@
    "source": [
     "### FIrst, some stars with noise\n",
     "\n",
-    "In the image below you can clearly see the stars but you can also see quite a bit of noise."
+    "The image below shows stars but shows quite a bit of noise as well."
    ]
   },
   {
@@ -112,11 +112,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now an *incorrect* attempt at removing noise\n",
+    "### Now an *incorrect* attempt at reducing noise\n",
     "\n",
-    "Notice that the call to the noise function has exactly the same arguments as above, in much the same way your canera's electronics will have the same noise properties every time you read out an image.\n",
+    "Notice that the call to the noise function has exactly the same arguments as above, in much the same way your camera's electronics will have the same noise properties every time you read out an image.\n",
     "\n",
-    "However, the amount of noise has **increased**, not decreased. It is much harder to pick out the stars in this image."
+    "However, the amount of noise has **increased**, not decreased. It's much harder to pick out the stars in this image."
    ]
   },
   {
@@ -147,9 +147,9 @@
    "source": [
     "## Every image has noise\n",
     "\n",
-    "Every image, including calibration images like bias and dark frames, has noise. If one were to try to calibrate images by taking a single bias image and a single dark image the final result might well look worse than before the image is reduced.\n",
+    "Every image, including calibration images like bias and dark frames, has noise. If we tried to calibrate images by taking a single bias image and a single dark image, the final result might well look worse than before the image is reduced.\n",
     "\n",
-    "For the sake of completeness, we'll see what happens below.\n",
+    "For demonstration, we'll see what happens below.\n",
     "\n",
     "Note that here we construct *realistic* bias and dark, but leave read noise out of the flat; we'll return to that point later. "
    ]
@@ -221,7 +221,7 @@
    "source": [
     "### Uncalibrated image\n",
     "\n",
-    "Below we desplay the uncalibrated image; in a moment we'll compare it to the calibrated version."
+    "Below we display the uncalibrated image; in a moment we'll compare it to the calibrated version."
    ]
   },
   {
@@ -280,7 +280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, subtract the bias and dark current from the star image and then apply the flat correction."
+    "Next, we subtract the bias and dark current from the star image and then apply the flat correction."
    ]
   },
   {
@@ -376,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
